Fixed CSS fix for clusters z-index

--- a/vp/static/css/viceprice-map.css
+++ b/vp/static/css/viceprice-map.css
@@ -87,6 +87,14 @@ html, body, span, h1, h2, h3, h4, h5, h6, em, img, ol, ul, li {
   margin: .5rem .5rem .5rem .5rem;
 }
 
+.legend-img-metro{
+  vertical-align: bottom;
+  display: inline-block;
+  text-align: center;
+  margin: .5rem .5rem .5rem .5rem;
+}
+
+
 .caption {
   display: block;
   font-size:90%;
@@ -333,6 +341,7 @@ cursor: pointer;
 .marker-cluster {
   background-clip: padding-box;
   border-radius: 20px;
+  z-index: 10000
   }
 
 .marker-cluster div {
